core - Ajustes
- Paginação